--- a/VRChat/52/1273352.html
+++ b/VRChat/52/1273352.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cstgpbasm68VrvBhQgfV5tNlLOtme/FqbOFEkFzznEE="></script>
+    "tAdIc54YyNm9V+GVXVubD68eJR58kw2vj8lVK7A6Hzw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】猫戦車\u0026猫ヘリコプター","description":"こちらは五式中戦車とOH-1ヘリコプターを元に制作した\n\nVRChat用のGenericアバターです。\n\n\nー導入方法ー\nNyankoTank.pngとTank.pngをUnityにインポートしたのち\n\n戦車、あるいはヘリコプターのfdxファイルを入れてください。\n\n※NyannkoTankと書いてありますがヘリコプターでも使います。\n\nヘリコプターの場合、同封されているUnityパッケージに\n\nアニメーションが入っていますので\n\nボーン名にあったアニメーションを適用させてください。\n\n\n\n【≫有料版と無料版との差はありません。\n　　これからの作品作製への励みになります。^^】\n\n\n\n【利用規約】\n\n改変、二次創作可\n※ただし二次創作の場合引用元を表記してください。\n\n商業及び営利目的による利用は不可。\n\n\n良いVRChatライフを！","url":"https://booth.pm/ja/items/1273352","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/85b78be0-98ff-4d72-b932-6387710ad1b6/i/1273352/f4bb791c-9591-4367-94aa-43eaa1d705ae_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cstgpbasm68VrvBhQgfV5tNlLOtme/FqbOFEkFzznEE="></script>
+    nonce="tAdIc54YyNm9V+GVXVubD68eJR58kw2vj8lVK7A6Hzw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -427,9 +427,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
