--- a/VRChat/17/1268317.html
+++ b/VRChat/17/1268317.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XrbTWA27nER53LKhBkQiHk80T8LvI1Zwr/jGEtTlf08="></script>
+    "kk0+CcQR3wN5jAsAdPBkyYU6fxdyWuvdagSWQSlwCNQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ノマキューブ / Noma cube【3Dモデル/モーション】","description":"無限に立方体が展開し続ける不思議なキューブ、通称 \"ノマキューブ\" (パタパタ立方体、カレイドキューブとも) の3DCGモデルです。\nパタパタ動き続けるアニメーション付き、改変しやすいテクスチャPSDファイルを同梱していますので自由なカスタマイズが可能です。\nまた、動くたびに全体が軽く揺れるアニメーションファイルも付属しています。\n\nℹFANBOX支援者向けに同ファイルを配布しています。そちらもご確認ください。\nhttps://www.pixiv.net/fanbox/creator/17346029/post/315773\n\n - - -\n\nIt is a 3DCG model of a mysterious cube called \"Noma cube\" (Pattera cube, Kaleido cube, etc.), which is continues to expand in infinity.\nIt is possible to customize it freely because it is bundled with an animation that keeps moving and an easily modifiable texture PSD file.\nIn addition, animation file that the whole lightly shakes with each movement is attached.\n\nℹThe file is distributed to FANBOX supporters. Please check that also.\nhttps://www.pixiv.net/fanbox/creator/17346029/post/315773","url":"https://booth.pm/ja/items/1268317","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1268317/5d2e0ef1-9dc0-4d16-809f-ae41a9dfc236_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XrbTWA27nER53LKhBkQiHk80T8LvI1Zwr/jGEtTlf08="></script>
+    nonce="kk0+CcQR3wN5jAsAdPBkyYU6fxdyWuvdagSWQSlwCNQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -529,9 +529,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
