--- a/VRChat/93/1269393.html
+++ b/VRChat/93/1269393.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HLmjr0h2hGOpxETAVVfhCBkN4qW8X9v+sYHgDY2K438="></script>
+    "IqB0e60XWTRlJ4IObwtILm0jyxNWl4UKZFqfV+gs6ME="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC用落下Animation","description":"\n\n◆◆◆　概要　◆◆◆\nVRChatのAnimationOverrideのうち、Fall（落下中移動キーを押しているときのモーション）での使用を想定したアニメーションです。\nサンプル画像ではS.I.N様のFailure（https://tomori-hikage.booth.pm/items/995244）を使わせていただいてますが、Humanoidならば多少の差異あれど動作すると思います。\n\n無料版とBoost版の内容に違いはありません。\n\n\n◆◆◆　内容物　◆◆◆\nFall.anim\nアニメーション本体です。\nInspectorでLoop Time、及びLoop Poseにチェックを入れるといい感じに動くかもしれません。\nそのまま導入する際は、AnimationOverrideのFallの項目にドラッグ＆ドロップすればOKです（４枚目の画像参照）\n\n\n◆◆◆　利用規約　◆◆◆\n・このデータは自由に改変していただいて構いません。\n\n・このデータは商用・非商用問わずご利用いただけます。\n\n・このデータ単体での再配布を禁止します。\n\n・このデータを用いたことで発生したいかなる問題についても当方は一切責任を負いません。\n\n\n\n◆◆◆　お問い合わせ　◆◆◆\n何か問題があればツイッターアカウントにリプライやダイレクトメッセージをお願いします。\n\nTwitter：@Velude_Archer\n\n\n\n2019/03/11　販売開始","url":"https://booth.pm/ja/items/1269393","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5a9babbc-9806-4e11-96bb-37f1ee1318c2/i/1269393/45a747e1-c733-4cc0-bc8d-02328bf3ad7a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HLmjr0h2hGOpxETAVVfhCBkN4qW8X9v+sYHgDY2K438="></script>
+    nonce="IqB0e60XWTRlJ4IObwtILm0jyxNWl4UKZFqfV+gs6ME="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -484,9 +484,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
