--- a/VRChat/05/1269105.html
+++ b/VRChat/05/1269105.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YGoNyl5Z0SsEMfZOrtbhMkOAyIHziO1wKCjq4ksINmg="></script>
+    "2Iky/jMbJSuNOzf9sp4N9w0mKL/i4KebdKuPZEz6Hcc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VAWS-012 \"イクシオン\"","description":"■VAWS-012\"イクシオン\"\nVRChat向けのメカモデルです\nアバターに組み込むことを想定しています\n(※ボーンは組み込まれていますがHumanoidではなくGenericボーンです)\n\n可変機構を備えておりランディング・ギアを展開した駐機形態と脚部を折り畳んだ巡航形態に変形します\n\n■組み込みについて\nモデルの仕様上、アバターに組み込むにはUnityやモデリングソフトでの作業が必要となります。予めご了承ください。\n\n■付属品\n・ディスクレドーム(WeaponSetのものと同一です)\n・対艦ミサイルランチャー\n\n■テクスチャ改変用のpsdファイル同梱\n\n■Reflex Shader 2 対応\n\n■禁止事項\n・本データの再配布は禁止です。\n・自作発言はおやめください。\n\n■許可事項\n・データの改変(パーツ取り含む)\n・営利利用\n・ゲームや映像制作\n・動画配信\n\n■その他\n・アバターペデスタルへの利用は禁止します。","url":"https://booth.pm/ja/items/1269105","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1269105/1b8253fb-a99d-4c14-a4b3-709167b29b61_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YGoNyl5Z0SsEMfZOrtbhMkOAyIHziO1wKCjq4ksINmg="></script>
+    nonce="2Iky/jMbJSuNOzf9sp4N9w0mKL/i4KebdKuPZEz6Hcc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -427,9 +427,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
