--- a/VRChat/48/1269048.html
+++ b/VRChat/48/1269048.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UlFaqAad3HVGyJWY9ZYqEljH/bAbsuMMevdD1vuvQj8="></script>
+    "aaSRZBAqmtc1bIuIkp5ib8pL3OsGL4/cBN74PC4Lq1c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向けオリジナルアバター】\"EWA-2 AXELA\"","description":"【動作確認】\nこのアバターは、2019/03/15以降の動作確認をしていません。\nなにかしらの不具合や、自力で更新が必要な可能性がありますことを予めご了承ください\n\n【説明】\nVRChatでの使用を想定したオリジナル3Dモデル\nその他ゲームや動画等でも使用可能\n\n\n制作者:Tokunaga_ac\n\n\n【更新履歴】\n2019/03/15  Ver1.01\n\n・一部塗りミスがあった為、Albedo、Metalicテクスチャを更新\n・arktoonの設定値変更。cube mapの追加。\n・Hand openのanimationが右手に反映されていなかった点の修正\n\n\n\n\n型式番号\"EWA-2\"　機体名\"AXELA(アクセラ)\"\n高い運動性と堅牢な装甲を持つ、格闘戦能力に特化した強襲型陸戦機です。\n\nドラゴンをモチーフにしており、動物的なしなやかさと機械の重厚さの両立を目指しました。\n\n\n\n\n\nunitypackage内のprefabは、\nstandardマテリアル、ウェザリングありテクスチャでセットアップ済み\n\n複数種類のマテリアル、テクスチャを同梱していますので、\n必要に応じてunityで設定を行ってください。\n\n\nまた、尻尾部分にダイナミックボーンの設定がしてあります。\nダイナミックボーンは有償アセットとなりますので、\n必要な場合は各自アセットストアで購入してインポートしてください。","url":"https://booth.pm/ja/items/1269048","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/6ac10b7b-256b-4e3b-b6d6-61437066f561/i/1269048/7183947a-d3e5-42a4-90c5-94e4e651e5fc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UlFaqAad3HVGyJWY9ZYqEljH/bAbsuMMevdD1vuvQj8="></script>
+    nonce="aaSRZBAqmtc1bIuIkp5ib8pL3OsGL4/cBN74PC4Lq1c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -496,9 +496,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
