--- a/VRChat/19/1268819.html
+++ b/VRChat/19/1268819.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ho9/KCSQ+PIR9P4/fnR8ET5PWwC9Vw50W1pprc1YZh8="></script>
+    "2mWVwIExbJUvCk3PBZsj3NTuSbtTfaxA0sCrcJ1pu6M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"トリスケルプレート 3Dモデル","description":"三脚巴/トリスケルの紋章をモチーフにした装飾用3Dモデルです。\nサイズ等を変えて好みの用途にお使いください。","url":"https://booth.pm/ja/items/1268819","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/423d2f20-5ba9-4da6-83e5-28de2771fb6a/i/1268819/52e1ded6-7110-4341-9117-3c155c903f75_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ho9/KCSQ+PIR9P4/fnR8ET5PWwC9Vw50W1pprc1YZh8="></script>
+    nonce="2mWVwIExbJUvCk3PBZsj3NTuSbtTfaxA0sCrcJ1pu6M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -427,9 +427,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
