--- a/VRChat/67/1268767.html
+++ b/VRChat/67/1268767.html
@@ -105,7 +105,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QyKxH7NWK2VAZXXunOmxUoEyV1LBoJjcnkIth03XUe4="></script>
+    "/+Hlv0fQKvtuH+j1n20DAIF1A9I+xZ4KjgRwJodOAvk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"麗華（Reifa）","description":"VRChat向け中華娘アバター、麗華(Reifa)ちゃんです！\n\nフルトラ適正を確認しておらず、アイトラッキングを実装していないためお安くしています。\n小物を作ったり、調整したりしたらどんどん更新していく予定です！アフターサポートもがんばります。\n\n〇使い方\n　ダイナミックボーンとVRCSDKを設定しています\n　先にこれらをインポートした後、Unityパッケージをインポートしてください\n\n　Reifa_ver.1.0.0は完成したモデルです\n　Textureフォルダにテクスチャ、Reifa_sotaiに見えないところを消す前の基になったモデルが入っています\n\n\n〇利用規約\n本商品は主にVRCHATのアバターを想定して作られたモデルです\nVRCHAT向けに作ってありますがただの3DモデルなのでVRMなどでも使えると思います\n後日、VRMを用意する予定です\n使用可能な範囲でお使いください\n\nUTS（ユニティちゃんトゥーンシェーダー）を想定して調整しているため、シンプルなテクスチャとなっています\n色等を改変する場合は合わせて調整してください\n\n不具合、お問い合わせはTwitterまたはmail等でご連絡ください\n\n本商品を使用したことによって生じた問題に関しては「立花　忌兎」は一切の責任を負いません\n\n\n〇利用可能例\n　前提として利用する先のゲーム等の利用規約には従ってください\n　改変、商用利用は許可します\n　　その際には、作者へ声をかけていただけると喜びます\n　VRM化、各種サービスへのアップロード\n　パーツの他モデルへの組み込み\n　\n\n〇禁止事項\n　再配布、自作発言\n\nユニティちゃんトゥーンシェーダー ver.2.0.5","url":"https://booth.pm/ja/items/1268767","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/07f8d132-9b8d-4729-9a7e-fbc0ba6c3d85/i/1268767/6a094287-696f-4ebf-ab59-c62a5e4f2ddf_base_resized.jpg"}
     </script>
@@ -116,7 +116,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QyKxH7NWK2VAZXXunOmxUoEyV1LBoJjcnkIth03XUe4="></script>
+    nonce="/+Hlv0fQKvtuH+j1n20DAIF1A9I+xZ4KjgRwJodOAvk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -529,9 +529,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
