--- a/VRChat/73/1268773.html
+++ b/VRChat/73/1268773.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "4eLLKocFzxDOvHtoRUiPhfPyWx8Zpp2KMKnTb2ueri4="></script>
+    "QH/SiXrRVg7quDQ4uZ1CqH3PQwBJ47n9lvPWUGdbcLY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ウシャンカ　ロシア帽","description":"概要\n\nロシアで被られている帽子、ウシャンカの3Dモデルです。\n△2376\n\n画像にのっているキッシュちゃんは付属しません。\n\n更新履歴\n\n2019/10/04\n・ファーシェーダの調整を行いました。\n・マーク部分のテクスチャがズレていたのを修正しました。\n・細部調整しました。\n\n2019/03/26\n・マテリアルが半分に減りました。\n・全体的に見えない所に出来ていたポリゴンを削除し△3255から△2376に減りました。\n・使用していたmatcapテクスチャを変更しました。\n・ソビエトのマークの葉の部分を修正しました。\n・シェーダをUnityパッケージに同梱したので別途インポートする必要が無くなり、使用するシェーダが1つ減りました。\n\n2019/03/10\n・公開\n\n内容物\n\nUshanka.unitypackage・・・ウシャンカのUnityパッケージです。\nread_me.txt・・・このファイルです。\n\n\n使用方法\n\n1.UnityでUshanka.unitypackageをインポートします。\n\n2.Ushanka.unitypackageをインポートするとUnlit_WF_ShaderとReflex Shaderがインポートされます。\n\n3.Ushanka PrefabをHierarchyにD\u0026Dして下さい。\n\n4.あとはお使いのアバターにあわせてセットしてください。\n\n\n・改変OK、再配布禁止です。\n・このデータの著作権は川崎緑が有します。\n\n\nウシャンカを使っていただいている画像をTwitterに送って頂けたら嬉しいです！\n@kwsk_ff","url":"https://booth.pm/ja/items/1268773","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dce6e592-96e4-415b-b305-dfa03faa05f5/i/1268773/cb887f0f-9ba9-46cb-b79a-c3369fa43007_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4eLLKocFzxDOvHtoRUiPhfPyWx8Zpp2KMKnTb2ueri4="></script>
+    nonce="QH/SiXrRVg7quDQ4uZ1CqH3PQwBJ47n9lvPWUGdbcLY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -420,9 +420,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
