--- a/VRChat/21/1268621.html
+++ b/VRChat/21/1268621.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3v9RtW++Nhbpe8qlQxFO613OKsr7psm5iF8AN0l/eBg="></script>
+    "gtsOm+6tPvb4G+oh5vnOB+k7c+PfLjx/H13hhlQL+Y4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]クラリネット","description":"オリジナル3Dモデル  クラリネット\n制作者 せいらん(Blue_moment_vr)\n\nオーケストラ等で使用されている木管楽器「クラリネット」の\n3Dモデルデータです。\nアバターに持たせる小道具等にお役立てください。\n\n※商品にユニティちゃんアバターは付属しません。\n\n【商品概要】\n\nfbx形式の3Dモデルです。\nアプリケーション、ゲーム、動画配信等にご利用いただけます。\n\n利用条件\nアバター『OK』/改変『OK』/パーツ流用『NG』\n/再配布『NG』/個人商用『NG』\n\n【基本仕様】\n三角ポリゴン数:△13943\n\n【商品内容】\nSG-02_Clarinet.unitypackage\n\n【導入方法】\nUnity2017.4.15f1にて　Asetts → Import Package → Custom Packageより\nSG-02_Clarinet.unitypackageをインポート後、\nPrefabsフォルダ内のプレハブをsceneにドラッグ\u0026ドロップすると\n楽器を構えた角度で配置されます。\n\n【利用規約】\n\n・はじめに\n\nオリジナル3Dモデル  クラリネット（以下本データ）は、\n せいらん が制作したオリジナルの3Dモデルです。\n本データの著作権は、制作者 せいらん に帰属します。\n\n本データを利用する時点で本規約に同意したものとします。\n本規約の内容は変更される場合があり、\nその際は最新のものが適応されます。\n\n・許諾事項\n\n本データの購入者には、購入者以外が複製や利用ができない形態での\n本データの利用を許諾します。\n\n利用条件\n利用条件\nアバター『OK』/改変『OK』/パーツ流用『NG』\n/再配布『NG』/個人商用『NG』\n\n・禁止事項\n\n制作者に許可を得ない営利目的・商用目的の利用。\n\n制作者が不適切と判断する場合の利用。\n　\n再配布（改変データを含む）\n\n各種サービスで購入者以外が自由に本データ及び改変データを\n利用可能な状態にすること。\n\n本データ及び改変データを使用したゲームやアニメーションにおいて、\n再度仕様できる状態の本データを含むデータの配布。\n\n・改変や流用について\n\n改変後のデータの著作権も せいらん に帰属します。\nまた、改変後のデータにも本規約は適用されます。\n\n本データの一部又は全部を他データへ使用する場合、\n本データ由来の部分のデータの著作権は せいらん に帰属します。\nまた、その部分のデータにも本規約は適用されます。\n\n改変に他データを流用する場合は、\n該当データの利用規約も順守してください。\n\n・免責事項\n\n本データを利用することで発生したトラブルや損失、損害に対して、\n制作者 せいらん は一切責任を負いません。\n本モデルのご使用は使用者の責任において行ってください。\n\n本データは予告なくアップデート、販売の停止をする場合があります。\n\n本規約において翻訳の都合上、他言語との差異が生じた場合\n日本語の利用規約を適用するものとします。\n\n\n制定日：2019年3月10日\n制定者：せいらん\n\n《更新履歴》\n2019/03/10　販売開始(Ver1.00)\n\n質問等がございましたら下記の連絡先にご連絡ください。\n\n連絡先\nTwitter：Blue_moment_vr","url":"https://booth.pm/ja/items/1268621","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b1a96d6e-6b09-4d39-ba34-02b3c0891190/i/1268621/b292a42a-4af6-4cc7-a3c2-44a343c7d850_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3v9RtW++Nhbpe8qlQxFO613OKsr7psm5iF8AN0l/eBg="></script>
+    nonce="gtsOm+6tPvb4G+oh5vnOB+k7c+PfLjx/H13hhlQL+Y4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
